docker-source/Docker 实战派容器入门七步法/code/第7章/7.2.2 架构选型1——服务暴露/3.使用Ingress暴露服务.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-docker-step7
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: docker.step7.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-docker-step7
            port:
              number: 80
